# cowsays

./: db.sqlite3  pyproject.toml
cowsay/: settings.py  urls.py
homepage/: forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py
templates/: post.html  topten.html
