[tool.poetry]
name = "cowsay"
version = "0.1.0"
description = "Simple cowsay app"
authors = ["Christopher Escobedo <chrisescobedo0617@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
